# mcp-coco

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  db.Dockerfile  devcontainer.json  docker-compose.yml  start-db.sh
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  scan.yml  secret-scan.yml
docs/plans/: condense-search-results.md  search-reranking.md
hooks/: check-readme.sh
scripts/: init_db.py
src/mcp_coco/: __init__.py  cli.py  config.py  db.py  formats.py  indexer.py  server.py  sources.py
tests/: test_indexer.py
