[project]
name = "cocoindex-mcp"
version = "0.1.0"
description = "MCP server that incrementally indexes repositories and documents with CocoIndex."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "cocoindex>=1.0.10",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "numpy>=2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.25",
    "python-dotenv>=1.2.2",
    "rich>=13.0",
    "sentence-transformers>=3.0",
]

[project.scripts]
mcp-coco = "mcp_coco.cli:main"
mcp-coco-server = "mcp_coco.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_coco"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
python_files = ["tests/test_*.py"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "C", "N", "D", "QB", "B", "RUF"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.17",
]
